# i18n configuration for mousedamper

i18n.gettext(
    gettext_domain,
    args: [
        '--keyword=_',
        '--keyword=N_',
        '--keyword=_W',
        '--from-code=UTF-8',
        '--package-name=@0@'.format(meson.project_name()),
        '--package-version=@0@'.format(meson.project_version()),
        '--msgid-bugs-address=miketwebster@gmail.com',
    ],
    preset: 'glib',
)
